# email-domain-classifier

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  README.backup.md  README.md  SECURITY.md  agents-instruction.md  pyproject.toml  requirements.txt  sample_emails.csv  setup-dev-env.sh  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build-verification.yml  ci.yml  docs.yml  quality-gates.yml  release.yml  security-comprehensive.yml
ceas-08/: email_education.csv  email_finance.csv  email_retail.csv  email_social_media.csv  email_technology.csv
classified-data/ceas_08/: classification_report.json  classification_report.txt  email_education.csv  email_finance.csv  email_government.csv  email_healthcare.csv  email_hr.csv  email_logistics.csv  email_retail.csv  email_social_media.csv  email_technology.csv  email_telecommunications.csv  email_unsure.csv  invalid_emails.csv  skipped_emails.csv
classified-data/sample_output/: email_finance.csv  email_logistics.csv  email_retail.csv  email_technology.csv
docs/: conf.py  deployment-playbook.md  development-playbook.md  index.md  installation.md
docs/architecture/: classification-flow.md  data-flow.md  overview.md
docs/design/: domain-profiles.md  dual-method-validation.md
docs/integration/: installation.md
docs/playbooks/: deployment-playbook.md  development-playbook.md
docs/troubleshooting/: common-issues.md  faq.md
docs/user-guide/: index.md  quick-start.md
email_classifier/: README.md  __init__.py  analyzer.py  classifier.py  cli.py  domains.py  processor.py  reporter.py  ui.py  validator.py
email_classifier/llm/: __init__.py  agent.py  config.py  prompts.py  providers.py  schemas.py
openspec/: project.md
openspec/changes/reorganize-python-cli-structure/: proposal.md  tasks.md
openspec/changes/reorganize-python-cli-structure/specs/project-structure/: spec.md
raw-data/: CEAS_08.csv  sample_emails.csv  sample_input.csv
test_output/: email_education.csv  email_finance.csv  email_government.csv  email_technology.csv  email_unsure.csv
tests/: README.md  __init__.py  test_analyzer.py  test_classifier.py  test_domains.py  test_enhanced_statistics.py  test_info_command.py  test_integration_validation.py  test_llm.py  test_validator.py
