[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-domain-classifier"
version = "1.0.0"
description = "Classify emails by domain using dual-method validation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Montimage Security Research", email = "research@montimage.com"}
]
maintainers = [
    {name = "Montimage Security Research", email = "research@montimage.com"}
]
keywords = ["email", "classification", "machine-learning", "cli", "data-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Communications :: Email",
]
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
email-cli = "email_classifier.cli:main"

[project.urls]
Homepage = "https://github.com/montimage/email-domain-classifier"
Repository = "https://github.com/montimage/email-domain-classifier"
"Bug Tracker" = "https://github.com/montimage/email-domain-classifier/issues"

[tool.setuptools]
packages = ["email_classifier"]

[tool.setuptools.package-data]
email_classifier = ["py.typed"]

# Development tool configurations
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["email_classifier"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=email_classifier",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]